tests/failing/bad-move.lua
obj.move("level2_nonexist_1", "level3_36")
